# AI-Agent-MCP

./: .env.example  .gitignore  CONFIGURATION_GUIDE.md  COST_ANALYSIS.md  END_TO_END_SETUP_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPORT_STATUS.md  IN_MEMORY_CACHE_SUMMARY.md  LAMBDA_APIS_GUIDE.md  LAMBDA_DEPLOYMENT_GUIDE.md  PROJECT_DOCUMENTATION.md  README.md  STAGING_PLAN.md  TERRAFORM_PLAN.md  config.py  debug_voice.html  debug_voice_advanced.html  deploy.sh  main.tf  pyproject.toml  test_agent.sh  test_all_imports.py  test_end_to_end.py  test_imports.py  test_in_memory_cache.py  test_mcp_server.py
bedrock-agent/: agent-config.json  agent-deployment.yaml
bedrock-direct-mcp/: README.md  agent-info.txt  ai_intent_api.py  check_agent_status.sh  complete_setup.sh  create_alias_simple.sh  create_lambda_role.sh  create_versions_manually.sh  deploy.sh  deploy_ai_api_aws.sh  deploy_ai_intent.sh  deploy_executors.sh  deploy_simple_ai.sh  main.tf  requirements_ai_intent.txt  requirements_simple_ai.txt  simple_ai_agent.py  simple_ai_server.py  test_agent.sh  test_ai_extraction.py  test_ai_intent.py  test_basic.sh  test_message_extraction.py  test_prompt_only.py  test_simple_ai.py  test_updated_ai_api.py  tfplan
lambda-functions/: README.md  get_message.py  lambda_handler.py  make_call.py  send_message.py  serve_all.py  websocket_handler.py
mcp-server/: Dockerfile  app.py  config.py  docker-compose.yml  requirements.txt
navietakie_simulation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: clean_repo.sh  deploy.sh  deploy_lambda.sh  start_local.sh  (+4 more)
(+47 files in other folders)
