[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "navietakie-simulation"
version = "1.0.0"
description = "AI-driven chat and voice assistant demo simulating a Grab-style driver and passenger communication system"
authors = [
    {name = "Sameer Jha", email = "sameer@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "boto3>=1.34.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "moto>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["venv*", "node_modules*", "build*", "dist*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["staging", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 